=======
CHANGES
=======

0.1a3 (unreleased)
==================

- Add support for querying for base classes of objects (#4880).


0.1a2 (2009-06-17)
==================

- Better handling of unpersistent objects.


0.1a1 (2009-06-05)
==================

- Stop ignoring callable objects (e.g. a Plone site) for indexing, just once
  ignore methods.

- Do not break during indexing if added object is not added to the ZODB
  (doesn't have the `_p_oid` attribute). Those objects are ignored for now
  and not added to the index structures. 

- Add ``rindex`` method for adding objects to the collection recursively.

- Add SimpleParse as a 3rdparty egg because it can't be retrieved from pypi
  for some months now.


0.1pre (2009-02-04)
===================

  - first alpha release


0.1pre (2008-08-19)
===================

  - initial functionality based on the work from the `diploma thesis`_


.. _diploma thesis: http://archiv.tu-chemnitz.de/pub/2008/0081/data/diplomarbeit.pdf