@@ -10,7 +10,7 @@ SimpleParse = 2.1.0.a1
 [test]
 recipe = zc.recipe.testrunner
 eggs = gocept.objectquery
-defaults = ['--color']
+defaults = ['--tests-pattern', '^f?tests$', '-v', '--color', '--exit-with-status']
 
 [debug]
 recipe = zc.recipe.egg:script
