@@ -1,0 +1,9 @@
+# Copyright (c) 2007-2009 gocept gmbh & co. kg
+# See also LICENSE.txt
+
+import persistent
+
+# class definitions for the test db
+
+class Library(persistent.Persistent):
+    """This class is used to test querying for module names of classes."""
